--- a/Tableviews_Part_3/Base.lproj/Main.storyboard
+++ b/Tableviews_Part_3/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -65,6 +66,7 @@
                                     <outlet property="moviePosterImageView" destination="aMM-c5-abE" id="fLg-LD-a9Y"/>
                                     <outlet property="movieSummaryLabel" destination="90p-Ty-yn0" id="kra-Rl-R96"/>
                                     <outlet property="movieTitleLabel" destination="FS7-pK-VSu" id="x8I-uc-4Yv"/>
+                                    <segue destination="xBf-wG-2cD" kind="show" identifier="MovieDetailViewSegue" id="jzY-Jo-7Al"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -79,12 +81,82 @@
             </objects>
             <point key="canvasLocation" x="744.79999999999995" y="64.31784107946028"/>
         </scene>
+        <!--Movie Detail View Controller-->
+        <scene sceneID="9ra-Hl-G92">
+            <objects>
+                <viewController id="xBf-wG-2cD" customClass="MovieDetailViewController" customModule="Tableviews_Part_3" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iLZ-Dk-tN2"/>
+                        <viewControllerLayoutGuide type="bottom" id="OSx-jP-U84"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DOE-dR-fus">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="84x-5J-WPP">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="NCe-Vf-6gB"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BCf-tT-QoS">
+                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hto-Jo-ttC">
+                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7LZ-LH-Nlf">
+                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Summary Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tzV-d3-V4A">
+                                <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="hto-Jo-ttC" secondAttribute="trailing" constant="8" id="0Uj-QO-j8i"/>
+                            <constraint firstItem="hto-Jo-ttC" firstAttribute="leading" secondItem="DOE-dR-fus" secondAttribute="leadingMargin" constant="8" id="90A-ED-yWL"/>
+                            <constraint firstItem="BCf-tT-QoS" firstAttribute="top" secondItem="84x-5J-WPP" secondAttribute="bottom" constant="8" id="APH-MG-pS1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="tzV-d3-V4A" secondAttribute="trailing" constant="8" id="Diq-48-ggL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7LZ-LH-Nlf" secondAttribute="trailing" constant="8" id="H0K-M2-uM8"/>
+                            <constraint firstItem="tzV-d3-V4A" firstAttribute="leading" secondItem="DOE-dR-fus" secondAttribute="leadingMargin" constant="8" id="LL5-Lb-oWU"/>
+                            <constraint firstItem="BCf-tT-QoS" firstAttribute="leading" secondItem="DOE-dR-fus" secondAttribute="leadingMargin" constant="8" id="UMM-E3-2eD"/>
+                            <constraint firstItem="84x-5J-WPP" firstAttribute="top" secondItem="iLZ-Dk-tN2" secondAttribute="bottom" constant="8" id="XHf-sB-auu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="BCf-tT-QoS" secondAttribute="trailing" constant="8" id="YBh-KN-6lD"/>
+                            <constraint firstItem="84x-5J-WPP" firstAttribute="leading" secondItem="DOE-dR-fus" secondAttribute="leadingMargin" constant="8" id="YFn-ar-hhp"/>
+                            <constraint firstItem="OSx-jP-U84" firstAttribute="top" secondItem="tzV-d3-V4A" secondAttribute="bottom" constant="8" id="iRN-qC-19n"/>
+                            <constraint firstItem="7LZ-LH-Nlf" firstAttribute="top" secondItem="hto-Jo-ttC" secondAttribute="bottom" constant="8" id="mqF-di-SKT"/>
+                            <constraint firstItem="7LZ-LH-Nlf" firstAttribute="leading" secondItem="DOE-dR-fus" secondAttribute="leadingMargin" constant="8" id="s44-pz-xeo"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="84x-5J-WPP" secondAttribute="trailing" constant="8" id="tV4-3I-TI3"/>
+                            <constraint firstItem="hto-Jo-ttC" firstAttribute="top" secondItem="BCf-tT-QoS" secondAttribute="bottom" constant="8" id="ulu-aY-dYR"/>
+                            <constraint firstItem="tzV-d3-V4A" firstAttribute="top" secondItem="7LZ-LH-Nlf" secondAttribute="bottom" constant="8" id="yiP-Lh-Tjj"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="genreLabel" destination="BCf-tT-QoS" id="7TL-Wn-Dbl"/>
+                        <outlet property="locationLabel" destination="hto-Jo-ttC" id="Bwl-Id-fYX"/>
+                        <outlet property="moviePosterImageView" destination="84x-5J-WPP" id="0qo-eF-4KD"/>
+                        <outlet property="summaryFullTextLabel" destination="tzV-d3-V4A" id="ydx-Bs-HhN"/>
+                        <outlet property="summaryLabel" destination="7LZ-LH-Nlf" id="5Bo-7a-VC1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vWS-ap-5NR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1559" y="64"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="IjZ-c6-2Ma">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KuV-Iy-6GA" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1jd-vJ-snn">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="1jd-vJ-snn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -96,6 +168,23 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5ka-oC-UvI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-194.40000000000001" y="64.31784107946028"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="bmQ-Tn-mli">
+            <objects>
+                <viewController id="HzD-dJ-pP6" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="LX6-fl-D7l"/>
+                        <viewControllerLayoutGuide type="bottom" id="1ze-dH-re2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dwn-ax-fSV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ijq-2z-QRa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
 </document>
